Added sporetal embed

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,6 +4,8 @@
   <h1 class="text-center">Manic Games Blogs</h1>
   <hr>
 
+  <!-- <img src="{{ url_for('static', filename='gifs/boy.gif') }}" height="350" alt="Cat"> -->
+
   <!-- Blog Posts -->
   <div class="row">
     <div class="col-12">
