--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -26,5 +26,10 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p>Artwork by <a href="https://twitter.com/dissolved_sam">Dissolved Sam</a></p>
+            </div>
+        </div>
     </div>
 </footer>
