--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="row-12">
-        <img src="{{ url_for('static', filename='ManicGamesLogo2.png') }}" height="100" alt="Manic Games Logo">
+        <img src="{{ url_for('static', filename='ManicGamesLogo2.png') }}" height="80" alt="Manic Games Logo">
       </div>
 
       <div class="row-12">
@@ -43,6 +43,14 @@
   <hr class="my-4">
 
   <div class="row">
+    <div class="col-lg-6 col-sm-12 mt-3">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" frameborder="0"
+          src="https://itch.io/embed/2485065?border_width=5&amp;bg_color=422445&amp;fg_color=ffffff&amp;link_color=d53176&amp;border_color=ab4570" 
+          style="width: 100%;"></iframe>
+      </div>
+    </div>
+
     <div class="col-lg-6 col-sm-12 mt-3">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" frameborder="0"
