--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,8 +5,13 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <h1 class="mb-4">Contact Us</h1>
+        <!--
         <p>If you have any questions or would like to reach out to us, please use the contact form below or send an
             email to <a class="text-wrap" href="mailto:manicgamesstudio@gmail.com">manicgamesstudio@gmail com</a>.
+        </p>
+        -->
+        <p>
+            Wanna shoot the breeze or throw down some thoughts? Hit us up using that contact form down below or throw an email our way at <a class="text-wrap" href="mailto:manicgamesstudio@gmail.com">manicgamesstudio@gmail.com</a>.
         </p>
 
         <form class="my-5 py-5" method="POST" action="/contact">
