--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,16 @@
   <hr class="my-4">
 
   <div class="row">
+
+    <div class="col-lg-6 col-sm-12 mt-3">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe frameborder="0"
+          src="https://itch.io/embed/2850500?border_width=5&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=ffffff
+          &amp;border_color=333333"
+          style="width: 100%;"></iframe>
+      </div>
+    </div>
+
     <div class="col-lg-6 col-sm-12 mt-3">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" frameborder="0"
